--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,9 @@
     "dist/js/angular-colorpicker.min.js",
     "dist/css/angular-colorpicker.min.css"
   ],
-  "dependencies" : {
-    "angular": "1.3.0",
-    "jquery": "1.8.3"
+  "peer-dependencies" : {
+    "angular": "^1.3.0",
+    "jquery": "^1.8.3"
   },
   "authors": [
     "linjinying"
